--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Bauhaus - OnePage Architecture & Interior HTML Template">
+  <meta name="description" content="SKAN HOUS | Incorporadora">
   <meta name="author" content="Paul">
 
   <!-- Favicons -->
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
 
-  <title>Bauhaus - OnePage Architecture & Interior HTML Template</title> 
+  <title>SKAN HOUS | Incorporadora</title> 
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
