--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <div class="menu"> 
       <span class="close-menu icon-cross right-boxed"></span>
       <div class="menu-lang right-boxed">
-        <a href="" class="active">En</a>
-        <a href="">Fr</a>
+        <a href="" class="active">Pt</a>
+        <a href="">En</a>
         <a href="">De</a>
       </div>
       <nav class="nav mobile-menu">
@@ -49,19 +49,19 @@
             <a  href="#main">Home</a>
           </li>
           <li>
-            <a href="#about">About</a>
+            <a href="#about">Sobre</a>
           </li>
           <li>
-            <a href="#projects">Projects</a>
+            <a href="#projects">Projetos</a>
           </li>
           <li>
-            <a href="#clients">Clients</a>
+            <a href="#clients">Clientes</a>
           </li>
           <li>
-            <a href="#team">Team</a>
+            <a href="#team">Time</a>
           </li>
           <li>
-            <a href="#contacts">Contacts</a>
+            <a href="#contacts">Contato</a>
           </li>
         </ul>
       </nav>
