--- a/index.html
+++ b/index.html
@@ -67,13 +67,10 @@
       </nav>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="#" class="icon ion-social-twitter"></a>
-          <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-googleplus"></a>
+          <a href="https://www.instagram.com/skanhous/" class="icon ion-social-instagram"></a>
           <a href="#" class="icon ion-social-linkedin"></a>
-          <a href="#" class="icon ion-social-dribbble-outline"></a>
         </div>
-        <div class="copy">© Bauhaus 2019. All Rights Reseverd<br> Design by LoganCee</div>
+        <div class="copy">© SKAN HOUS 2024. Todos os Direitos Reservados.<br> Design by PwerIo.</div>
       </div>
     </div>
 
