--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <a class="brand" href="#">
         <img alt="" src="images/brand.png">
         <div class="brand-info">
-          <div class="brand-name">bauhaus</div>
-          <div class="brand-text">architecture</div>
+          <div class="brand-name">skanhous</div>
+          <div class="brand-text">incorporadora</div>
         </div>
       </a>
 
@@ -98,11 +98,9 @@
 
       <!-- Social -->
       <div class="social-list hidden-xs">
-        <a href="#" class="icon ion-social-twitter"></a>
-        <a href="#" class="icon ion-social-facebook"></a>
-        <a href="#" class="icon ion-social-googleplus"></a>
+        <a href="https://www.instagram.com/skanhous/" class="icon ion-social-instagram"></a>
         <a href="#" class="icon ion-social-linkedin"></a>
-        <a href="#" class="icon ion-social-dribbble-outline"></a>
+        <a href="#" class="icon ion-social-linktree"></a>
       </div>
 
       <!-- Spacer -->
