--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </a>
 
       <!-- Phone -->
-      <address class="navbar-address visible-md visible-xl">call us: <span class="text-dark">(+080) 9684 32 45 789</span></address>
+      <address class="navbar-address visible-md visible-xl">WhatsApp: <span class="text-dark">(11) 99100 1961</span></address>
 
       <!-- Button -->
       <button type="button" class="navbar-toggle hidden-lg" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
@@ -100,7 +100,6 @@
       <div class="social-list hidden-xs">
         <a href="https://www.instagram.com/skanhous/" class="icon ion-social-instagram"></a>
         <a href="#" class="icon ion-social-linkedin"></a>
-        <a href="#" class="icon ion-social-linktree"></a>
       </div>
 
       <!-- Spacer -->
@@ -113,19 +112,19 @@
             <a  href="#main">Home</a>
           </li>
           <li>
-            <a href="#about">About</a>
+            <a href="#about">Sobre</a>
           </li>
           <li>
-            <a href="#projects">Projects</a>
+            <a href="#projects">Projetos</a>
           </li>
           <li>
-            <a href="#clients">Clients</a>
+            <a href="#clients">Clientes</a>
           </li>
           <li>
-            <a href="#team">Team</a>
+            <a href="#team">Time</a>
           </li>
           <li>
-            <a href="#contacts">Contacts</a>
+            <a href="#contacts">Contato</a>
           </li>
         </ul>
       </nav>
