--- a/index.html
+++ b/index.html
@@ -584,9 +584,9 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <strong class="section-subtitle">about us</strong>
-              <h2 class="section-title section-about-title">We Are The Leader In The Architectural</h2>
-              <p>For each project we establish relationships with partners who we know will help us create added value for your project. As well as bringing together the public and private sectors, we make sector-overarching links to gather knowledge and to learn from each other</p>
+              <strong class="section-subtitle">sobre</strong>
+              <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais de alta qualidade</h2>
+              <p>Para cada projeto, estabelecemos relacionamentos com parceiros que criam valor para a sua casa ou seu projeto. Nossa equipe multidiciplinar é composta por engenheiros, arquitetos, desenhistas que trabalham em conjunto para criar projetos tecnológicos que tem o único objetivo de proporcionar qualidade de vida para nossos moradores.</p>
               <div class="experience-box">
                 <div class="experience-border"></div>
                 <div class="experience-content">
