--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
           <div class="row">
             <div class="col-md-6">
               <strong class="section-subtitle">sobre</strong>
-              <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais de alta qualidade</h2>
+              <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais de Alta Padrão</h2>
               <p>Para cada projeto, estabelecemos relacionamentos com parceiros que criam valor para a sua casa ou seu projeto. Nossa equipe multidiciplinar é composta por engenheiros, arquitetos, desenhistas que trabalham em conjunto para criar projetos tecnológicos que tem o único objetivo de proporcionar qualidade de vida para nossos moradores.</p>
               <div class="experience-box">
                 <div class="experience-border"></div>
@@ -610,26 +610,26 @@
             <div class="col-md-3">
               <div class="section-info">
                 <div class="title-hr wow fadeInLeft"></div>
-                <div class="info-title">What We Do</div>
+                <div class="info-title">O que fazemos</div>
               </div>
             </div>
             <div class="col-md-9">
               <div class="row-services row">
                 <div class="col-service col-sm-6 col-lg-4 wow fadeInUp">
                   <span class="text-dark icon icon-apartment"></span>
-                  <h4>Architecture</h4>
-                  <p>First stages in a project are very important to understand your client´s needs. With many different tools we approach.</p>
+                  <h4>Idealizamos</h4>
+                  <p>O primeiro passo é criar Projetos Modulares dentro dos pilares ESG (Environment, Social e Governance) aliado a projetos arquitônicos comtemporânos desenvolvidos em tecnologia BIM.  .</p>
                 </div>
                 <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
                   <span class="text-dark icon icon-couch"></span>
-                  <h4>Interior Design</h4>
-                  <p>Once in the design process, we must go deeper in your project´s foundation, we need to arrive to the essence.</p>
+                  <h4>Planejamos</h4>
+                  <p>Uma vez pronto, planejamos a execução de cada unidade para melhor atender a situação de cada cliente sempre pensando em otimizar tempo e custo da obra.</p>
                 </div>
                 <div class="clearfix visible-sm visible-md"></div>
                 <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.8s">
                   <span class="text-dark icon icon-pencil-ruler"></span>
-                  <h4>Plants</h4>
-                  <p>Once in the design process, we must go deeper in your project´s foundation, we need to arrive to the essence, the roots in order.</p>
+                  <h4>Executamos</h4>
+                  <p>Com os nossos contrutorers parceiros realizamos o projeto do começo até a entrega das chaves.</p>
                 </div>
               </div>
             </div>
