--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                   <p>O primeiro passo é criar Projetos Modulares dentro dos pilares ESG (Environment, Social e Governance) aliado a projetos arquitônicos comtemporânos desenvolvidos em tecnologia BIM.  .</p>
                 </div>
                 <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-                  <span class="text-dark icon icon-couch"></span>
+                  <span class="text-dark icon icon-construct"></span>
                   <h4>Planejamos</h4>
                   <p>Uma vez pronto, planejamos a execução de cada unidade para melhor atender a situação de cada cliente sempre pensando em otimizar tempo e custo da obra.</p>
                 </div>
