--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                 </div>
                 <div class="clearfix visible-sm visible-md"></div>
                 <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.8s">
-                  <span class="text-dark icon icon-construct"></span>
+                  <span class="text-dark icon icon-truck"></span>
                   <h4>Executamos</h4>
                   <p>Com os nossos contrutorers parceiros realizamos o projeto do começo até a entrega das chaves.</p>
                 </div>
