--- a/index.html
+++ b/index.html
@@ -642,14 +642,14 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-5">
-               <h2 class="section-title">Latest Projects</h2>
+               <h2 class="section-title">Projetos</h2>
             </div>        
             <div class="col-lg-7">
               <div class="filter-content">
                 <ul class="filter-carousel filter pull-lg-right js-filter-carousel">
-                  <li class="active"><a href="#" class="all" data-filter="*">All</a></li>
-                  <li><a href="#" data-filter=".building">Building </a></li>
-                  <li><a href="#" data-filter=".interior-exterior">Interior & Exterior </a></li>
+                  <li class="active"><a href="#" class="all" data-filter="*">Todos</a></li>
+                  <li><a href="#" data-filter=".building">Skan Hous 1 & 2 </a></li>
+                  <li><a href="#" data-filter=".interior-exterior">F: Poles</a></li>
                 </ul>
               </div>
             </div>
