--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Redesign<br>Interior For<br>Villa
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Woodframe<br>Projeto F:Poles<br>Lago Azul
               </div>
 
 
@@ -722,11 +722,11 @@
             <img alt="" class="img-responsive" src="images/projects/6-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Small<br>House Near<br>Wroclaw</h3>
+                <h3 class="project-title">Módulo<br>Skan Hous 1.0<br>Alessandra Pretti</h3>
                 <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
               </div>
             </div>
-            <span class="link-arrow">See project <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Veja o projeto <i class="icon ion-ios-arrow-right"></i></span>
           </a>
 
           <!-- Project Carousel Item 7 -->
@@ -974,7 +974,7 @@
           <div class="row">
             <div class="col-lg-8"><img alt="" class="project-detail-img" src="images/projects/6-680x680.jpg"></div>
             <div class="col-lg-4">
-              <h3 class="project-detail-title">Small House Near Wroclaw</h3>
+              <h3 class="project-detail-title">Skan Hous 1.0/h3>
               <p class="project-detail-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut. magna aliquam erat volutpat enim ad minim veniam. Duis autem vel eum iriure dolor in hendrerit in.</p>
               <ul class="project-detail-list text-dark">
                 <li>
