--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Small<br> House Near<br> Wroclaw
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous 1.0<br> Módulo Sala<br> Arq. Alessandra Pretti
               </div>
 
               <!-- Layer 6 -->
@@ -256,7 +256,7 @@
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:0.1em; text-transform:uppercase;">House
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:0.1em; text-transform:uppercase;">Steel Frame
               </div>
 
               <!-- Layer 7 -->
@@ -278,7 +278,7 @@
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="#project6" class="popup-with-zoom-anim link-arrow">See project <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="#project6" class="popup-with-zoom-anim link-arrow">Veja o projeto <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
@@ -423,7 +423,7 @@
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="#project7" class="popup-with-zoom-anim link-arrow">See project <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="#project7" class="popup-with-zoom-anim link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
@@ -568,7 +568,7 @@
                 data-splitout="none" 
                 data-responsive_offset="on" 
                 data-elementdelay="0.05" style="font-weight:600; ">
-                  <a href="#project4" class="popup-with-zoom-anim link-arrow">See project <i class="icon ion-ios-arrow-thin-right"></i>
+                  <a href="#project4" class="popup-with-zoom-anim link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-thin-right"></i>
                 </a>
               </div>
             </li>
@@ -666,7 +666,7 @@
                 <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
               </div>
             </div>
-            <span class="link-arrow">See project <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
           </a>
           
           <!-- Project Carousel Item 2 -->
@@ -678,7 +678,7 @@
                 <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
               </div>
             </div>
-            <span class="link-arrow">See project <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
           </a>
           
           <!-- Project Carousel Item 3 -->
@@ -690,7 +690,7 @@
                 <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
               </div>
             </div>
-            <span class="link-arrow">See project <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
           </a>
 
           <!-- Project Carousel Item 4 -->
@@ -702,7 +702,7 @@
                 <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
               </div>
             </div>
-            <span class="link-arrow">See project <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
           </a>
 
           <!-- Project Carousel Item 5 -->
@@ -714,7 +714,7 @@
                 <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
               </div>
             </div>
-            <span class="link-arrow">See project <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
           </a>
 
           <!-- Project Carousel Item 6 -->
@@ -734,11 +734,11 @@
             <img alt="" class="img-responsive" src="images/projects/7-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">The luxury<br> residence in<br> forest</h3>
+                <h3 class="project-title">Simplicidade e<br> sofisticação<br> by F:Poles</h3>
                 <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
               </div>
             </div>
-            <span class="link-arrow">See project <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
           </a>
 
           <!-- Project Carousel Item 8 -->
@@ -750,7 +750,7 @@
                 <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipil pcing elit. Proin nunc leo, rhoncus sit amet tolil arcu vel, pharetra volutpat sem lorn Donec tincidunt velit nec laoreet semper...</p>
               </div>
             </div>
-            <span class="link-arrow">See project <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Veja o projeto  <i class="icon ion-ios-arrow-right"></i></span>
           </a>
         </div>
 
