--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous 1.0<br> Módulo Sala<br> Arq. Alessandra Pretti
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous 1.0<br>Módulo Sala<br>Alessandra Pretti
               </div>
 
               <!-- Layer 6 -->
@@ -401,7 +401,7 @@
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:0.1em; text-transform:uppercase;">Residential
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:0.1em; text-transform:uppercase;">Woodframe
               </div>
 
               <!-- Layer 7 -->
@@ -546,7 +546,7 @@
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:0.1em; text-transform:uppercase;">Residential
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:0.1em; text-transform:uppercase;">Wood Frame
               </div>
 
               <!-- Layer 7 -->
@@ -586,7 +586,7 @@
             <div class="col-md-6">
               <strong class="section-subtitle">sobre</strong>
               <h2 class="section-title section-about-title">Somos uma incorporadora de Projetos Modulares Residenciais de Alta Padrão</h2>
-              <p>Para cada projeto, estabelecemos relacionamentos com parceiros que criam valor para a sua casa ou seu projeto. Nossa equipe multidiciplinar é composta por engenheiros, arquitetos, desenhistas que trabalham em conjunto para criar projetos tecnológicos que tem o único objetivo de proporcionar qualidade de vida para nossos moradores.</p>
+              <p>Para cada projeto, estabelecemos relacionamentos com parceiros que criam valor para a sua casa ou seu projeto. Nossa equipe multidiciplinar é composta por engenheiros, arquitetos, desenhistas, programadores entre outros profissionais que trabalham em conjunto para criar projetos com sofisticação tecnológica com o único objetivo de proporcionar qualidade de vida para nossos moradores.</p>
               <div class="experience-box">
                 <div class="experience-border"></div>
                 <div class="experience-content">
@@ -629,7 +629,7 @@
                 <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.8s">
                   <span class="text-dark icon icon-truck"></span>
                   <h4>Executamos</h4>
-                  <p>Com os nossos contrutorers parceiros realizamos o projeto do começo até a entrega das chaves.</p>
+                  <p>Com os nossos contrutorers parceiros realizamos o projeto do começo até a entrega das chaves.Tranquilidade, qualidade e previsibilidade na execução dos projetos Skan Hous.   </p>
                 </div>
               </div>
             </div>
