--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
           <div class="row">
             <div class="col-lg-8"><img alt="" class="project-detail-img" src="images/projects/6-680x680.jpg"></div>
             <div class="col-lg-4">
-              <h3 class="project-detail-title">Skan Hous 1.0/h3>
+              <h3 class="project-detail-title">Skan Hous 1.0<h3>
               <p class="project-detail-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut. magna aliquam erat volutpat enim ad minim veniam. Duis autem vel eum iriure dolor in hendrerit in.</p>
               <ul class="project-detail-list text-dark">
                 <li>
