--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
       <!-- Section Clients -->
       <section id="clients" class="section-clients section bg-dots">
         <div class="container">
-          <h2 class="section-title">From Great Our Clients</h2>
+          <h2 class="section-title">Clientes e Parceiros</h2>
           <div class="client-carousel owl-carousel">
             <div class="client-carousel-item">
               <img alt="" class="client-img" src="images/clients/1-92x92.jpg">
