--- a/index.html
+++ b/index.html
@@ -1319,21 +1319,17 @@
                 <div class="col-md-9">
                   <div class="row-contact row">
                     <div class="col-contact col-lg-6">
-                      <h3 class="contact-title contact-top">Melbourne, <span>Australia</span></h3>
-                      <p class="contact-address text-muted"><strong>269 King Str, 05th Floor, Utral Hosue Building, Melbourne, VIC 3000, Australia.</strong></p>
-                      <p class="contact-row"><strong class="text-dark">Email:</strong> info@bauhaus.co</p>
-                      <p class="contact-row"><strong class="text-dark">Skype:</strong>  bauhaus.arc</p>
+                      <h3 class="contact-title contact-top">São Paulo, <span>Brasil</span></h3>
+                      <p class="contact-address text-muted"><strong>Al. Grajau, 219, Baueri - cep 06.454-050</strong></p>
+                      <p class="contact-row"><strong class="text-dark">Email:</strong> contato@skanhous.com</p>
                     </div>
                     <div class="col-contact col-lg-6">
                       <p class="contact-top"><strong class="text-muted">Call directly:</strong></p>
-                      <p class="phone-lg text-dark">+99 (0) 344 956 4050</p>
-                      <div class="text-muted"><strong class="text-dark">Follow us</strong><br>
+                      <p class="phone-lg text-dark">+55 (11) 99100 1961</p>
+                      <div class="text-muted"><strong class="text-dark">Nos siga nas redes sociais</strong><br>
                         <div class="contact-social social-list">
-                          <a href="" class="icon ion-social-twitter"></a>
-                          <a href="" class="icon ion-social-facebook"></a>
-                          <a href="" class="icon ion-social-googleplus"></a>
-                          <a href="" class="icon ion-social-linkedin"></a>
-                          <a href="" class="icon ion-social-dribbble-outline"></a>
+                          <a href="https://www.instagram.com/skanhous/" class="icon ion-social-instagram"></a>
+                          <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
                         </div>
                       </div>
                     </div>
