--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
                 <div class="col-md-3">
                   <div class="section-info">
                     <div class="title-hr wow fadeInLeft"></div>
-                    <div class="info-title">Keep in touch</div>
+                    <div class="info-title">Entre em Contato</div>
                   </div>
                 </div>
                 <div class="col-md-9">
@@ -1344,7 +1344,7 @@
                 <div class="col-md-3">
                   <div class="section-info">
                     <div class="title-hr wow fadeInLeft"></div>
-                    <div class="info-title">You need help?</div>
+                    <div class="info-title">Nos envie uma mensagem</div>
                   </div>
                 </div>
                 <div class="col-md-9">
@@ -1382,8 +1382,8 @@
           <a class="brand pull-left" href="#">
             <img alt="" src="images/brand.png">
             <div class="brand-info">
-              <div class="brand-name">bauhaus</div>
-              <div class="brand-text">architecture</div>
+              <div class="brand-name">skanhoous</div>
+              <div class="brand-text">incorporadora</div>
             </div>
           </a>
         </div>
@@ -1398,13 +1398,13 @@
         </div>
         <div class="flex-item">
           <ul class="lang-list">
-            <li class="active"><a href="">EN</a></li>
-            <li><a href="">FR</a></li>
-            <li><a href="">DE</a></li>
+            <li class="active"><a href="">PT</a></li>
+            <li><a href="">EN</a></li>
+            <li><a href="">SP</a></li>
           </ul> 
         </div>
         <div class="flex-item">
-          <div class="inline-block pull-sm-right">© Bauhaus 2019. All Rights Resevered</div>
+          <div class="inline-block pull-sm-right">© SKAN HOUS 2024. Todos os direitos reservados.</div>
         </div>
       </div>
     </footer>
