--- a/index.html
+++ b/index.html
@@ -978,24 +978,24 @@
               <p class="project-detail-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut. magna aliquam erat volutpat enim ad minim veniam. Duis autem vel eum iriure dolor in hendrerit in.</p>
               <ul class="project-detail-list text-dark">
                 <li>
-                  <span class="left">Clients:</span>
-                  <span class="right">Ethan Hunt, John Doe</span>
+                  <span class="left">Clientes:</span>
+                  <span class="right">Pedro e Bianca</span>
                 </li>
                 <li>
-                  <span class="left">Completion:</span>
-                  <span class="right">February 5th, 2019</span>
+                  <span class="left">Entrega:</span>
+                  <span class="right">Setembro de 2023</span>
                 </li>
                 <li>
-                  <span class="left">Project Type:</span>
-                  <span class="right">Villa, Residence</span>
+                  <span class="left">Tipo de Projeto:</span>
+                  <span class="right">Modular Completio</span>
                 </li>
                 <li>
-                  <span class="left">Architects:</span>
-                  <span class="right">Logan Cee, Paul</span>
+                  <span class="left">Architeto:</span>
+                  <span class="right">Alessandra Pretti</span>
                 </li>
                 <li>
-                  <span class="left">Budget:</span>
-                  <span class="right">$1 200 000</span>
+                  <span class="left">Metragem:</span>
+                  <span class="right">350 M2 </span>
                 </li>
               </ul>
               <div class="project-detail-meta">
@@ -1110,10 +1110,10 @@
               <div class="client-box">
                 <img alt="" class="image-quote" src="images/image-icons/icon-quote.png">
                 <div class="client-title">
-                  <span class="client-name">Adam Stone</span> 
-                  <span class="client-company">/ CEO at Google INC</span>
+                  <span class="client-name">Alessandra Pretti</span> 
+                  <span class="client-company">/ Arquiteta Estudio Elevare</span>
                 </div>
-                <p class="client-description">Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie luctus.Lorem ipsum Dolor tusima olatiup.</p>
+                <p class="client-description">Muito me orgulho participar deste projeto junto com a equipe da Skan Hous. A arquitetura modular é a solução para os questões de moradia no nosso pais.</p>
               </div>
             </div>
             <div class="client-carousel-item">
@@ -1121,10 +1121,10 @@
               <div class="client-box">
                 <img alt="" class="image-quote" src="images/image-icons/icon-quote.png">
                 <div class="client-title">
-                  <span class="client-name">Anabella Kleva </span> 
-                  <span class="client-company">/ Managerment at Envato</span>
+                  <span class="client-name">Andre Pinheiro </span> 
+                  <span class="client-company">/ Engenheiro Civil Zanollin Enengenharia</span>
                 </div>
-                <p class="client-description">Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie luctus.Lorem ipsum Dolor tusima olatiup.</p>
+                <p class="client-description">Um time que exautivamente pensa na melhora dos processos e na construção offsite sem perder o foco na razão do nosso trarbalho, o cliente.</p>
               </div>
             </div>
             <div class="client-carousel-item">
@@ -1192,7 +1192,7 @@
             <div class="col-md-3">
               <div class="section-info">
                 <div class="title-hr wow fadeInLeft"></div>
-                <div class="info-title">Meet Our Team</div>
+                <div class="info-title">Conheça o Nosso Time</div>
               </div>
             </div>
             <div class="col-md-9">
@@ -1324,7 +1324,7 @@
                       <p class="contact-row"><strong class="text-dark">Email:</strong> contato@skanhous.com</p>
                     </div>
                     <div class="col-contact col-lg-6">
-                      <p class="contact-top"><strong class="text-muted">Call directly:</strong></p>
+                      <p class="contact-top"><strong class="text-muted">WhatsApp:</strong></p>
                       <p class="phone-lg text-dark">+55 (11) 99100 1961</p>
                       <div class="text-muted"><strong class="text-dark">Nos siga nas redes sociais</strong><br>
                         <div class="contact-social social-list">
