--- a/index.html
+++ b/index.html
@@ -590,8 +590,8 @@
               <div class="experience-box">
                 <div class="experience-border"></div>
                 <div class="experience-content">
-                  <div class="experience-number">26</div>
-                  <div class="experience-info">Years<br>Experience<br>Working</div>
+                  <div class="experience-number">7</div>
+                  <div class="experience-info">Meses<br>350 M2<br>Completa</div>
                 </div>
               </div>
             </div>
