--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </li>
 
             <!-- Slide 2 -->
-            <li data-transition="Zoom Out" data-slotamount="1" data-masterspeed="1000" data-fsmasterspeed="1000">
+            <li data-transition="Fade" data-slotamount="1" data-masterspeed="1000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
               <img src="images/slider/slide2.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
@@ -429,7 +429,7 @@
             </li>
 
             <!-- Slide 3 -->
-            <li data-transition="Zoom Out" data-slotamount="1" data-masterspeed="1000" data-fsmasterspeed="1000">
+            <li data-transition="Fade" data-slotamount="1" data-masterspeed="1000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
               <img src="images/slider/slide3.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
