--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <ul>
 
             <!-- Slide 1 -->
-            <li data-transition="Zoom Out" data-slotamount="1" data-masterspeed="1000" data-fsmasterspeed="1000">
+            <li data-transition="Fade Cross" data-slotamount="1" data-masterspeed="4000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
               <img src="images/slider/slide1.jpg" data-bgparallax="1"  alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
